# RPI

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  firmware.c  gatts_table_creation.h
